syntax = "proto3";

option go_package = "movie-ticket-booking/book";

package book;

service Booker {
	rpc ListMovie(NoParam) returns (Options) {}
	rpc ListGenres(NoParam) returns (Options) {}
	rpc ListShowTimes(NoParam) returns (Options) {}
	rpc MoviesByTitle(QueryParam) returns (Movies) {}
	rpc MoviesByGenre(QueryParam) returns (Movies) {}
	rpc MoviesByTime(QueryParam) returns (Movies) {}
	rpc BuyTicket(BuyRequest) returns (NoParam) {}
}

message NoParam {}

message Options {
	repeated string list = 2;
}

message QueryParam {
	string content = 1;
}

message Movie {
	string title = 1;
	string genre = 2;
	int64 year = 3;
	string showTime = 4;
	int64 room = 5;
	string class = 6;
	int64 ticketsLeft = 7;
}

message Movies {
	repeated Movie movie = 1;
}

message BuyRequest {
	Movie movie = 1;
	int64 amount = 2;
}